--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,21 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Totowala website" />
+  <!-- google font used in site are given below  --> 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  
+  <!-- font-family: 'DM Serif Display', serif;    font-family: 'Hind Siliguri', sans-serif;-->
+  
   <style>
     * {
       margin: 0;
+      font-family: 'Hind Siliguri', sans-serif;
+    }
+    .active{
+      background-color : #BDD400;
     }
   </style>
   <title>React App</title>
